<resources>
    <string name="app_name">TaskManager</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="make_new_note">Make New Note</string>
    <string name="date">Date</string>
    <string name="make_new_task">Make New Task</string>
    <string name="choose_task">Choose Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="save_task">Save Task</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="iWantNewTask">Make new Task!</string>
    <string name="iHaveTask">Tasks!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
