<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/one"
        android:title="@string/one"
        android:icon="@drawable/ic_launcher_background" />
    <item android:id="@+id/two"
        android:title="@string/two"
        android:icon="@drawable/ic_launcher_background" />
    <item android:id="@+id/three"
        android:title="@string/three"
        android:icon="@drawable/ic_launcher_background" />
    <item android:id="@+id/four"
        android:title="@string/four"
        android:icon="@drawable/ic_launcher_background" />
    <item android:id="@+id/five"
        android:title="@string/five"
        android:icon="@drawable/ic_launcher_background" />
</menu>